# obsidian-cloud-migrate

./: .gitignore  README.md  config.yaml  convert_icon.py  main.py  pyproject.toml  uploadtest.py
app_types/: exceptions.py
components/: __init__.py  file_list_view.py  main_window.py  settings_dialog.py  system_tray.py  theme_manager.py  work_progress.py
core/: __init__.py
docs/: AWS Upload Guide.md  Classes for ObsidianCloudMigrate.md  Classes for VaultManager.md  Getting AWS Credentials.md  Obsidian Cloud Migrate Build Sequence.md  ProjectClasses.md  ProjectRequirements.md  ProjectStructure.md
managers/: __init__.py  compression_worker.py  config_manager.py  deletion_worker.py  file_manager.py  link_manager.py  sound_manager.py  task_manager.py  upload_manager.py  upload_worker.py
types/: __init__.py
utils/: __init__.py  error_handler.py  logger.py
